# pico2-TCD1304-reader

./: CMakeLists.txt  README.md  monitor_tcd1304.py  tcd1304_reader.c
